1/3/14 add additional options to LogConcentrationGraph
1/3/14 add placeholder for quantity graph, wire up to AB switch
1/3/14 wire up graph indicator values to solution
1/3/14 make graph indicators non-interactive by default (no handle, no shadow)
1/3/14 optional handle on graph indicators
1/2/14 move graph components to common/view/graph/
1/2/14 create subtypes for graph indicators
1/2/14 support various locations of pointer on graph indicator
1/2/14 add optional drop-shadow to graph indicator
12/26/13 more work on graph indicator
12/26/13 partial implementation of graph indicator
12/23/13 remove unused imports, identified by adding 'unused: true' to jshint-options.js
12/23/13 Basics: revert pH probe and wire to back, so that dashed indicator line is visible
12/23/13 add 'in part' to RSC funding notice
12/20/13 cleanup of color-stop in Solute
12/20/13 move computation of color into Solute, since it knows about the color scheme
12/20/13 make solution color change more slowly by moving optional color-stop from 0.5 to 0.25, and making the color-stop ratio configurable per solute, ph-scale-basics#34
12/20/13 move duplicate code related to filling/draining into Solution model element
12/20/13 fix: pH value changes when draining at low volume, ph-scale-basics#19
12/20/13 change import pattern for dot.Util.log10
12/20/13 add implementation-notes.txt and model.txt
12/20/13 migrate MovableDragHandler to scenery-phet, ph-scale-basics#26
12/20/13 change Solute constructor, ph-scale-basics#14
12/19/13 change test for minimum-volume threshold in SolutionNode
12/18/13 misc doc changes requested during code review
12/18/13 added verbose documentation about where things are positioned in the models, as requested in review
12/18/13 put pH meter on top of rendering order, allow it to be dragged anywhere in the ScreenView's layoutBounds
12/18/13 add PHScaleConstants.LAYOUT_BOUNDS, use in all ScreenView constructors