@@ -13,8 +13,8 @@ DESIGN
 HIGHEST
 
 HIGH
+- add minor ticks to log graph
 - PHUtils.toTimesTenString appears to be buggy, eg shows H3O concentration of '0.0000016' for 'Chicken Soup'
-- move graph indicators when concentrations change
 - add interactivity to H3O and OH indicators in Custom screen
 - implement quantity graph
 - Solutions: log graph, not interactive
